# OpenGL-Solar-Systems-Simulations

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
resources/: scales.txt
scripts/: buildglm.bat  remake.bat  start.bat
src/: Camera.cpp  Camera.hpp  DebugLevel.hpp  DrawableObject.cpp  DrawableObject.hpp  DrawableUnit.cpp  DrawableUnit.hpp  FrameManager.cpp  FrameManager.hpp  GLDrawWindow.cpp  GLDrawWindow.hpp  IDManager.cpp  IDManager.hpp  Object3D.cpp  Object3D.hpp  Object3DFactory.hpp  Object3DTracker.cpp  Object3DTracker.hpp  ObjectND.cpp  ObjectND.hpp  OrbitalMovement.cpp  OrbitalMovement.hpp  OrbitalObject3D.cpp  OrbitalObject3D.hpp  OrbitalObjectFactory.cpp  OrbitalObjectFactory.hpp  PlanetsGroupLoader.hpp  RenderGroup.cpp  RenderGroup.hpp  RenderGroup3D.cpp  RenderGroup3D.hpp  RenderGroup3DManager.cpp  RenderGroup3DManager.hpp  RenderGroupID.hpp  RenderGroupManager.cpp  RenderGroupManager.hpp  Scales.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  (+56 more)
src/shaders/: box.frag  object3d.frag  object3d.vert  pyramid.vert
